--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -5,9 +5,9 @@
         <link rel="stylesheet" href="assets/styles.css">
     </head>
     <body
-        {% include "../partials/navbar.njk" %}
+        {% include "../sections/navbar.njk" %}
         
-        {% include "../partials/footer.njk" %}
+        {% include "../sections/footer.njk" %}
         <script src="assets/scripts.js"></script>
     </body>
 </html>
