--- a/src/sections/navbar.njk
+++ b/src/sections/navbar.njk
@@ -4,11 +4,10 @@
             <img src="./imgs/mec_logo.png" class="img-responsive">
         </div>
         <div class="col-sm-6 col-lg-6 col-xs-6 col-md-6 col-lg-6"></div>
-        <div class="col-sm-3 col-xs-3 col-md-3 col-lg-3">
+        <div class="col-sm-3 col-xs-3 col-md-3 col-lg-3 excel">
             <img src="./imgs/excel2017.png" class="img-responsive">
         </div>
     </div>
 </nav>
-<div>
-</div>
+
 
