--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -9,6 +9,8 @@
 
         {% include "../sections/intro.njk" %}
 
+        {% include "../sections/timer.njk" %}
+
         {% include "../sections/footer.njk" %}
         <script src="./jquery-3.2.1.min%20(1).js"></script>
         <script src="jquery.ccountdown.js"></script>
