--- a/src/sections/intro.njk
+++ b/src/sections/intro.njk
@@ -1,22 +1,7 @@
-<section>
-    <div class="ccounter timer-bg">
-        <div class="timer-contain">
-            <div class="timer-label">
-                <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#fff" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" value="75">
-                <div class="dial-label">days</div>
-            </div>
-            <div class="timer-label">
-                <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#fff" data-skin="tron" data-thickness=".2" value="75">
-                <div class="dial-label">hours</div>
-            </div>
-            <div class="timer-label">
-                <input class="knob minute dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#fff" data-skin="tron" data-thickness=".2" value="75">
-                <div class="dial-label">minutes</div>
-            </div>
-            <div class="timer-label">
-                <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#fff" data-skin="tron" data-thickness=".2" value="75">
-                <div class="dial-label">seconds</div>
-            </div>
-        </div>
+<section class="intro-section">
+
+    <img src="./imgs/secondlap.png" class="bg" />
+    <div class="intro-text">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </div>
 </section>
