--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -1,13 +1,22 @@
 section{
-    background-color: dimgrey;
     height: 100vh;
 }
-.timer-contain{
-    display: flex;
+
+
+.bg { 
+    /* Full height */	
+    height: 70%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: absolute;
+    left: 6%;
+    top: 50%;
+    transform: translate(0,-50%);
 }
-.timer-label{
-    width: 25%;
-}
-.dial-label{
-    color: white;
+.intro-text{
+	width: 50%;
+	padding: 10%;
+	float: right;
 }
