--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -3,22 +3,26 @@
     <head>
         <title>The Second Lap</title>
         <link rel="stylesheet" href="assets/styles.css">
+        <link href="jquery.fullPage.css">
     </head>
     <body>
         {% include "../sections/navbar.njk" %}
+        <div id="fullpage">
+            {% include "../sections/intro.njk" %}
 
-        {% include "../sections/intro.njk" %}
+            {% include "../sections/timer.njk" %}
 
-        {% include "../sections/timer.njk" %}
-
-        {% include "../sections/footer.njk" %}
+            {% include "../sections/footer.njk" %}
+        </div>
         <script src="./jquery-3.2.1.min%20(1).js"></script>
         <script src="jquery.ccountdown.js"></script>
         <script src="jquery.knob.js"></script>
         <script src="init.js"></script>
+        <script src="jquery.fullPage.min.js"></script>
         <script src="assets/scripts.js"></script>
         <script>
 	        $(".ccounter").ccountdown(2017,8,13,'7:00');
+	        $("#fullpage").fullpage();
         </script>
     </body>
 </html>
