--- a/src/sections/timer.njk
+++ b/src/sections/timer.njk
@@ -1,4 +1,4 @@
-<section class="timer-section">
+<section class=" section timer-section">
 	<img src="./imgs/thesecondlap.png" class="event-logo" />
 	<div class="ccounter timer-bg">
         <div class="timer-contain">
