--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -12,6 +12,10 @@
 
             {% include "../sections/timer.njk" %}
 
+            {% include "../sections/sponsors.njk" %}
+
+            {% include "../sections/contact.njk" %}
+
             {% include "../sections/footer.njk" %}
         </div>
         <script src="./jquery-3.2.1.min%20(1).js"></script>
