--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -89,6 +89,7 @@ body{
 .timer-section{
     background: #fff;
     height: 100vh;
+    text-align: center;
 }
 .timer-contain{
     display: flex;
@@ -116,6 +117,7 @@ body{
     
 }
 .event-logo{
-    margin-top: 2%;
-    width: 50%;
+    width: 30%;
+    margin: 0 auto;
+    margin-bottom: 2%;
 }
