Added Contact page

--- a/src/sections/contact.njk
+++ b/src/sections/contact.njk
@@ -1,3 +1,25 @@
 <section class="section">
-
+    <div class="contact">
+        <h1 class="contact_heading">Contact US</h1>
+        <div class="contacts_section">
+            <div class="container">
+                <div class="col-lg-6 col-md-6 col-xs-6 col-sm-6">
+                    <h2>Elza Tess Varkey</h2>
+                    <span>Social Initatives Manager,Excel2017</span><br>
+                    <span>+91 9562391591</span>
+                </div>
+                <div class="col-xs-6 col-md-6 col-lg-6 col-xs-6">
+                    <h2>Arjun Saju</h2>
+                    <span>Chairman,Excel2017</span><br>
+                    <span>+91 8943239997</span>
+                </div>
+            </div>
+        </div>
+        <div class="socialIcons">
+            <h4>Follow Us on</h4>
+            <a href="#" class="facebook"><i class="fa fa-facebook-official fa-3x" aria-hidden="true"></i></a>
+            <a href="#" class="youtube"><i class="fa fa-youtube fa-3x"></i></a>
+            <a href="#" class="instagram"><i class="fa fa-instagram fa-3x"></i></a>
+        </div>
+    </div>
 </section>
