--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -4,6 +4,7 @@
         <title>The Second Lap</title>
         <link rel="stylesheet" href="assets/styles.css">
         <link href="jquery.fullPage.css">
+        <link href="font-awesome.min.css">
     </head>
     <body>
         {% include "../sections/navbar.njk" %}
@@ -23,6 +24,7 @@
         <script src="jquery.knob.js"></script>
         <script src="init.js"></script>
         <script src="jquery.fullPage.min.js"></script>
+        <script src="https://use.fontawesome.com/75bc5066dd.js"></script>
         <script src="assets/scripts.js"></script>
         <script>
 	        $(".ccounter").ccountdown(2017,8,13,'7:00');
