--- a/src/sections/sponsors.njk
+++ b/src/sections/sponsors.njk
@@ -1,3 +1,7 @@
-<section class="section">
+<section class="section sponsor-section">
+	  <div class="sponsor gold"></div>
+	  <div class="sponsor yesbank"></div>
+	  <div class="sponsor medical"></div>
+
 
 </section>
