--- a/src/css/sponsor.css
+++ b/src/css/sponsor.css
@@ -1,5 +1,6 @@
 .sponsor-section{
 	background-color: black;
+	width: 100vw;
 }
 .sponsor{
 	height: 100vh;
@@ -8,13 +9,35 @@
 	
 }
 .gold{
-	background-color: darkgreen;
+	background-color: #263238;
 }
 .yesbank{
-	background-color: darkblue;
+	background-color: #283593;
 	display: none;
 }
 .medical{
-	background-color: darkred;
+	background-color: white;
 	display: none;
+}
+
+.sponsor-logo{
+	width: 50%;
+	padding: 10%;
+	position: absolute;
+    left: 6%;
+    top: 40%;
+    transform: translate(0,-50%);
+}
+.sponsor-text{
+	text-align: center;
+	width: 50%;
+	padding: 10%;
+	float: right;
+	position: absolute;
+    left: 46%;
+    top: 40%;
+    transform: translate(0,-50%);
+}
+.gold-text,.yesbank-text{
+	color: white;
 }
