--- a/src/sections/timer.njk
+++ b/src/sections/timer.njk
@@ -3,11 +3,11 @@
 	<div class="ccounter timer-bg">
         <div class="timer-contain">
             <div class="timer-label">
-                <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" value="75">
+                <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" data-rotation="anticlockwise" value="75">
                 <div class="dial-label"><h2>days</h2></div>
             </div>
             <div class="timer-label">
-                <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
+                <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-rotation=anticlockwise value="75">
                 <div class="dial-label"><h2>hours</h2></div>
             </div>
             <div class="timer-label">
@@ -15,7 +15,7 @@
                 <div class="dial-label"><h2>minutes</h2></div>
             </div>
             <div class="timer-label">
-                <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
+                <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-rotation="anticlockwise" value="75">
                 <div class="dial-label"><h2>seconds</h2></div>
             </div>
         </div>
