--- a/src/css/sponsor.css
+++ b/src/css/sponsor.css
@@ -1,7 +1,8 @@
 .sponsor{
-	height: 89.4vh;
+	height: 100vh;
 	width: 100vw;
 	position: absolute;
+	overflow: hidden;
 
 }
 .gold{
@@ -21,7 +22,7 @@
 	padding: 10%;
 	position: absolute;
     left: 6%;
-    top: 40%;
+    top: 50%;
     transform: translate(0,-50%);
 }
 .sponsor-text{
@@ -31,7 +32,7 @@
 	float: right;
 	position: absolute;
     left: 46%;
-    top: 40%;
+    top: 50%;
     transform: translate(0,-50%);
 }
 .gold-text,.yesbank-text{
