--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -28,6 +28,7 @@
         <script src="assets/scripts.js"></script>
         <script>
 	        $(".ccounter").ccountdown(2017,8,13,'7:00');
+            //$(".dial").knob({'rotation':'anticlockwise'})
 	        $("#fullpage").fullpage();
         </script>
     </body>
