--- a/src/sections/intro.njk
+++ b/src/sections/intro.njk
@@ -2,14 +2,7 @@
         <div class="row">
             <img src="./imgs/secondlap.png" class="bg col-sm-6" />
             <div class="intro-text col-sm-6">
-                At ​ Govt. Model Engineering College, we believe that ​ life is the most valuable gift, yet we
-fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to
-someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this
-message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in
-association with Gold’s Gym, in connection with ​ World Organ Donation Day​ . The
-mini-marathon will witness about 500 participants, accompanied by teams from ​ The Indian
-Medical Association​ , spreading the message of Organ Donation. The event will be flagged off
-at ​ Willingdon Island​ and will cover a distance of 10 KM to conclude at Marine Drive, Kochi.
+                At ​ Govt. Model Engineering College, we believe that ​ life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym, in connection with ​ World Organ Donation Day​ . The mini-marathon will witness about 500 participants, accompanied by teams from ​ The Indian Medical Association​ , spreading the message of Organ Donation. The event will be flagged off at ​ Willingdon Island​ and will cover a distance of 10 KM to conclude at Marine Drive, Kochi.
             </div>
         </div>
     </section>
