--- a/src/css/sponsor.css
+++ b/src/css/sponsor.css
@@ -1,9 +1,11 @@
-.sponsor{
-	height: 100vh;
-	width: 100vw;
-	position: absolute;
+.sponsor-section{
+	position: relative;
 	overflow: hidden;
-
+}
+.sponsor{
+	height: 100%;
+	width: 100%;
+	position: absolute;
 }
 .gold{
 	background-color: #263238;
