--- a/src/sections/timer.njk
+++ b/src/sections/timer.njk
@@ -1,5 +1,7 @@
 <section class=" section">
-	<img src="./imgs/thesecondlap.png" class="event-logo img-responsive" />
+    <div class="event-logo">
+	    <img src="./imgs/thesecondlap.png" class="img-responsive" />
+    </div>
 	<div class="ccounter timer-bg">
         <div class="timer-contain">
             <div class="timer-label">
