--- a/src/sections/sponsors.njk
+++ b/src/sections/sponsors.njk
@@ -1,5 +1,6 @@
 
 <section class="section sponsor-section">
+	<div class="common">	
 		<div class="sponsor gold">
 			<div class="row">
 				<img src="./imgs/gold.png" class="sponsor-logo col-sm-6" />
@@ -24,4 +25,5 @@
 	            </div>
 	        </div>
 		</div>
+	</div>
 </section>
