--- a/src/css/sponsor.css
+++ b/src/css/sponsor.css
@@ -6,6 +6,7 @@
 	height: 100%;
 	width: 100%;
 	position: absolute;
+	top: 0;
 }
 .gold{
 	background-color: #263238;
@@ -24,7 +25,7 @@
 	padding: 10%;
 	position: absolute;
     left: 6%;
-    top: 50%;
+    top: 40%;
     transform: translate(0,-50%);
 }
 .sponsor-text{
@@ -34,7 +35,7 @@
 	float: right;
 	position: absolute;
     left: 46%;
-    top: 50%;
+    top: 40%;
     transform: translate(0,-50%);
 }
 .gold-text,.yesbank-text{
