--- a/src/sections/contact.njk
+++ b/src/sections/contact.njk
@@ -1,4 +1,5 @@
 <section class="section">
+    <div class="common">
     <div class="contact">
         <h2 class="contact_heading">Contact US</h2>
         <div class="contacts_section">
@@ -21,5 +22,6 @@
             <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
             <a href="#" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
         </div>
+    </div>
     </div>
 </section>
