--- a/src/sections/timer.njk
+++ b/src/sections/timer.njk
@@ -1,22 +1,23 @@
 <section class=" section">
+    <div class="common">
     <div class="event-logo">
 	    <img src="./imgs/thesecondlap.png" class="img-responsive" />
     </div>
 	<div class="ccounter timer-bg">
         <div class="timer-contain">
-            <div class="timer-label">
+            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
                 <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" data-rotation="anticlockwise" value="75">
                 <div class="dial-label"><h2>days</h2></div>
             </div>
-            <div class="timer-label">
+            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
                 <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-rotation=anticlockwise value="75">
                 <div class="dial-label"><h2>hours</h2></div>
             </div>
-            <div class="timer-label">
+            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
                 <input class="knob minute dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
                 <div class="dial-label"><h2>minutes</h2></div>
             </div>
-            <div class="timer-label">
+            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
                 <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-rotation="anticlockwise" value="75">
                 <div class="dial-label"><h2>seconds</h2></div>
             </div>
@@ -24,5 +25,6 @@
     </div>
     <div class="register">
         <a href="#" class="btn btn-danger reg-button" role="button">Register</a>
+    </div>
     </div>
 </section>
