--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -4,8 +4,7 @@
         <title>The Second Lap</title>
         
         <link rel="stylesheet" href="assets/styles.css">
-        <link href="jquery.fullPage.css">
-        <link href="font-awesome.min.css">
+        <link href="jquery.fullPage.css" rel="stylesheet">
     </head>
     <body>
         {% include "../sections/navbar.njk" %}
@@ -19,14 +18,10 @@
             {% include "../sections/contact.njk" %}
         </div>
         <script src="./jquery-3.2.1.min%20(1).js"></script>
-        <script src="jquery.ccountdown.js"></script>
-        <script src="jquery.knob.js"></script>
-        <script src="init.js"></script>
         <script src="jquery.fullPage.min.js"></script>
         <script src="https://use.fontawesome.com/75bc5066dd.js"></script>
         <script src="assets/scripts.js"></script>
         <script>
-	        $(".ccounter").ccountdown(2017,8,13,'7:00');
             //$(".dial").knob({'rotation':'anticlockwise'})
 	        $("#fullpage").fullpage();
         </script>
