--- a/src/sections/timer.njk
+++ b/src/sections/timer.njk
@@ -3,26 +3,115 @@
     <div class="event-logo">
 	    <img src="./imgs/thesecondlap.png" class="img-responsive" />
     </div>
-	<div class="ccounter timer-bg">
-        <div class="timer-contain">
-            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
-                <input class="knob days dial" data-readOnly="true" data-width="150" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-min="0" data-max="365" data-rotation="anticlockwise" value="75">
-                <div class="dial-label"><h2>days</h2></div>
-            </div>
-            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
-                <input class="knob hour dial" data-readOnly="true" data-width="150" data-min="0" data-max="24" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-rotation=anticlockwise value="75">
-                <div class="dial-label"><h2>hours</h2></div>
-            </div>
-            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
-                <input class="knob minute dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" value="75">
-                <div class="dial-label"><h2>minutes</h2></div>
-            </div>
-            <div class="timer-label col-md-3 col-lg-3 col-sm-6 col-xs-6">
-                <input class="knob second dial" data-readOnly="true" data-width="150" data-min="0" data-max="60" data-displayPrevious=true data-fgColor="#000" data-skin="tron" data-thickness=".2" data-rotation="anticlockwise" value="75">
-                <div class="dial-label"><h2>seconds</h2></div>
+        <div class="wrap">
+
+            <div class="countdown">
+                <div class="bloc-time days" data-init-value="40">
+                    <span class="count-title">Days</span>
+
+                    <div class="figure days days-1">
+                        <span class="top">0</span>
+                        <span class="top-back">
+          <span>0</span>
+        </span>
+                        <span class="bottom">0</span>
+                        <span class="bottom-back">
+          <span>0</span>
+        </span>
+                    </div>
+
+                    <div class="figure days days-2">
+                        <span class="top">0</span>
+                        <span class="top-back">
+          <span>0</span>
+        </span>
+                        <span class="bottom">0</span>
+                        <span class="bottom-back">
+          <span>0</span>
+        </span>
+                    </div>
+                </div>
+
+
+                <div class="bloc-time hours" data-init-value="40">
+                    <span class="count-title">Hours</span>
+
+                    <div class="figure hours hours-1">
+                        <span class="top">0</span>
+                        <span class="top-back">
+          <span>0</span>
+        </span>
+                        <span class="bottom">0</span>
+                        <span class="bottom-back">
+          <span>0</span>
+        </span>
+                    </div>
+
+                    <div class="figure hours hours-2">
+                        <span class="top">0</span>
+                        <span class="top-back">
+          <span>0</span>
+        </span>
+                        <span class="bottom">0</span>
+                        <span class="bottom-back">
+          <span>0</span>
+        </span>
+                    </div>
+                </div>
+
+                <div class="bloc-time min" data-init-value="0">
+                    <span class="count-title">Minutes</span>
+
+                    <div class="figure min min-1">
+                        <span class="top">0</span>
+                        <span class="top-back">
+          <span>0</span>
+        </span>
+                        <span class="bottom">0</span>
+                        <span class="bottom-back">
+          <span>0</span>
+        </span>
+                    </div>
+
+                    <div class="figure min min-2">
+                        <span class="top">0</span>
+                        <span class="top-back">
+          <span>0</span>
+        </span>
+                        <span class="bottom">0</span>
+                        <span class="bottom-back">
+          <span>0</span>
+        </span>
+                    </div>
+                </div>
+
+                <div class="bloc-time sec" data-init-value="0">
+                    <span class="count-title">Seconds</span>
+
+                    <div class="figure sec sec-1">
+                        <span class="top">0</span>
+                        <span class="top-back">
+          <span>0</span>
+        </span>
+                        <span class="bottom">0</span>
+                        <span class="bottom-back">
+          <span>0</span>
+        </span>
+                    </div>
+
+                    <div class="figure sec sec-2">
+                        <span class="top">0</span>
+                        <span class="top-back">
+          <span>0</span>
+        </span>
+                        <span class="bottom">0</span>
+                        <span class="bottom-back">
+          <span>0</span>
+        </span>
+                    </div>
+                </div>
             </div>
         </div>
-    </div>
     <div class="register">
         <a href="#" class="btn btn-danger reg-button" role="button">Register</a>
     </div>
