--- a/src/sections/intro.njk
+++ b/src/sections/intro.njk
@@ -6,7 +6,7 @@
             	<img src="./imgs/secondlap.png" class="bg img-responsive" />
             </div>
             <div class="intro-text col-md-6 col-lg-6 col-xs-12 col-sm-12">
-                Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.
+                <p>Life is the most valuable gift, yet we fail to appreciate it. Of all the things one fancies, what if you had the power to give this gift to someone in need? On August 13th, 2017, YES BANK and Excel 2107 will strive to spread this message through ​ “The Second Lap”, a mini marathon being organised ​ in Kochi in association with Gold’s Gym and Medical Trust Hospital, in connection with ​ World Organ Donation Day​.</p>
             </div>
         </div>
         </div>
