--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,4 @@
-body {
-  background-color: #f2f1ed;
-}
+
 
 .wrap {
   position: absolute;
@@ -39,11 +37,18 @@ h2 strong {
 }
 
 .countdown {
-  width: 720px;
-  margin: 0 auto;
+    width: 100%;
+    margin: auto;
+    text-align: center;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    position: absolute;
+    top: 50%;
+    transform: translate(0,-50%);
 }
 .countdown .bloc-time {
-  float: left;
+  float: none;
   margin-right: 45px;
   text-align: center;
 }
@@ -60,8 +65,8 @@ h2 strong {
 .countdown .figure {
   position: relative;
   float: left;
-  height: 110px;
-  width: 100px;
+  height: 88px;
+  width: 80px;
   margin-right: 10px;
   background-color: #fff;
   border-radius: 8px;
@@ -77,7 +82,7 @@ h2 strong {
   left: 0;
   right: 0;
   margin: auto;
-  font: normal 5.94em/107px "Lato";
+  font: normal 80px "Lato";
   font-weight: 700;
   color: #de4848;
 }
