--- a/src/layout/index.njk
+++ b/src/layout/index.njk
@@ -5,6 +5,7 @@
         
         <link rel="stylesheet" href="assets/styles.css">
         <link href="jquery.fullPage.css" rel="stylesheet">
+        <meta name="viewport" content="width=device-width,initial-scale=1.0">
     </head>
     <body>
         {% include "../sections/navbar.njk" %}
