--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -1,21 +1,71 @@
-.common{
-    margin-top: 80px;
+.common {
+	margin-top: 80px;
 }
-.intro-text{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(0,-50%);
+
+.intro-logo {
+	margin: auto;
 }
-@media(max-width: 980px){
-    section{
-        position: relative;
-    }
-    .common{
-        margin: unset;
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%,-50%);
-    }
+.intro-text > img {
+	width: 100%;
+}
+.intro-text > p {
+	line-height: 25px;
+	margin-top: 20px;
+	text-align: justify;
+}
+
+@media (max-width: 800px) {
+	section {
+		position: relative;
+	}
+	.common {
+		margin: unset;
+		margin-top: 50px;
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		transform: translate(-50%, -50%);
+	}
+	.intro-logo {
+		width: 100%;
+	}
+	.intro-logo > img {
+		width: 500px;
+		margin: auto;
+	}
+	.intro-text > img {
+		width: 60%;
+	}
+	.intro-text > p {
+		width: 80%;
+		margin: 25px auto;
+	}
+}
+
+@media (max-width: 600px) {
+	.common {
+		margin: unset;
+		position: relative;
+		top: unset;
+		left: unset;
+		transform: none;
+	}
+	.intro-text > p {
+		width: 90%;
+		margin: 15px auto;
+		font-size: 12px;
+		line-height: 23px;
+	}
+	.intro-logo > img {
+		width: 300px;
+	}
+}
+
+@media (max-width: 360px) {
+	.intro-logo > img {
+		width: 175px;
+	}
+	.intro-text > p {
+		line-height: 20px;
+	}
 }
