--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -104,37 +104,40 @@
 	}
 }
 
-body{
-    text-align: center;
+body {
+	text-align: center;
 }
-.navbar{
+.navbar {
 	background-color: #fff;
-    margin-bottom: 0;
-    height: 80px;
-    position: fixed;
-    width: 100%;
-    z-index: 999;
+	margin-bottom: 0;
+	height: 80px;
+	position: fixed;
+	width: 100%;
+	z-index: 999;
 }
-.navbar img{
-    margin: 0;
-    padding: 3%;
+.navbar img {
+	margin: 0;
+	padding: 3%;
 }
-.navbar .container{
-    margin: 0;
-    width: 100%;
+.navbar .container {
+	margin: 0;
+	width: 100%;
 }
-.navbar .excel{
-    float: right;
-}
-.colg-logo{
-	height: 70px;
-}
-.excel-logo{
-	height: 70px;
+.navbar .excel {
 	float: right;
 }
 
-
+@media (max-width: 800px) {
+	.navbar {
+		height: 50px;
+	}
+	.excel-logo {
+		width: 100%;
+	}
+	.colg-logo {
+		width: 100%;
+	}
+}
 
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 #map{
