responsive route page

--- a/src/sections/route.njk
+++ b/src/sections/route.njk
@@ -1,4 +1,17 @@
 <section class="section">
-    <div id="map">
+    <div class="route">
+
+        <div class="waypoints">
+            <h1>WayPoints</h1>
+            <p>Bridge</p>
+            <p>Marine Drive Ground</p>
+            <p>Bridge</p>
+            <p>Marine Drive ground</p>
+
+        </div>
+        <div id="map"></div>
+
     </div>
+
+
 </section>
