--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -141,8 +141,40 @@ body {
 
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 #map{
+    height: 60vh;
+    width: 40%;
+    margin-top: 30px;
+    left: 40%;
+}
+.route{
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.waypoints{
+    width: 40%;
+    position: absolute;
     height: 100%;
-    width: 100%;
+    top: 35%;
+}
+@media(max-width: 980px) {
+    .waypoints{
+       width: 100%;
+       position: absolute;
+       top: 0 ;
+
+    }
+    .route{
+        position: relative;
+        margin: 0;
+    }
+    #map{
+        width: 100%;
+        left: 0;
+        top: 30vh;
+    }
 }
 .sponsor-section{
 	position: relative;
