--- a/src/css/route.css
+++ b/src/css/route.css
@@ -1,4 +1,36 @@
 #map{
+    height: 60vh;
+    width: 40%;
+    margin-top: 30px;
+    left: 40%;
+}
+.route{
+    display: flex;
+    position: relative;
+    flex-wrap: wrap;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+.waypoints{
+    width: 40%;
+    position: absolute;
     height: 100%;
-    width: 100%;
+    top: 35%;
+}
+@media(max-width: 980px) {
+    .waypoints{
+       width: 100%;
+       position: absolute;
+       top: 0 ;
+
+    }
+    .route{
+        position: relative;
+        margin: 0;
+    }
+    #map{
+        width: 100%;
+        left: 0;
+        top: 30vh;
+    }
 }
