--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -117,13 +117,11 @@ body {
 	border-radius: 0;
 	box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
-.navbar img {
-	margin: 0;
-	padding: 3%;
-}
+
 .nav-container {
 	width: 100%;
 	display: flex;
+	height: 100%;
 	justify-content: center;
 }
 .navbar .excel {
@@ -146,13 +144,17 @@ body {
 	margin: auto 0 auto auto;
 }
 .excel-logo {
-	width: 150px;
+	width: 130px;
 }
 .colg-logo {
-	width: 150px;
+	width: 130px;
 }
 
 @media (max-width: 800px) {
+	.navbar img {
+		margin: 0;
+		padding: 3%;
+	}
 	.navbar {
 		height: 80px;
 	}
