--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -180,9 +180,9 @@ body {
 html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abbr,acronym,address,big,cite,code,del,dfn,em,img,ins,kbd,q,s,samp,small,strike,strong,sub,sup,tt,var,b,u,i,center,dl,dt,dd,ol,ul,li,fieldset,form,label,legend,table,caption,tbody,tfoot,thead,tr,th,td,article,aside,canvas,details,embed,figure,figcaption,footer,header,hgroup,menu,nav,output,ruby,section,summary,time,mark,audio,video{margin:0;padding:0;border:0;font-size:100%;font:inherit;vertical-align:baseline}article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section{display:block}body{line-height:1}ol,ul{list-style:none}blockquote,q{quotes:none}blockquote:before,blockquote:after,q:before,q:after{content:'';content:none}table{border-collapse:collapse;border-spacing:0}
 #map{
     height: 60vh;
-    width: 40%;
+    width: 50%;
     margin-top: 30px;
-    left: 40%;
+    left: 50%;
 }
 .route{
     display: flex;
@@ -192,7 +192,7 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     margin-right: 30px;
 }
 .waypoints{
-    width: 40%;
+    width: 50%;
     position: absolute;
     height: 100%;
     top: 35%;
@@ -201,18 +201,23 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     .waypoints{
        width: 100%;
        position: absolute;
-       top: 0;
-        height: 50%;
+       top: 15vh;
+        height: 30%;
 
     }
     .route{
         position: relative;
         margin: 0;
+        height: 100%;
+    }
+    .waypoints h1{
+        margin-bottom: 10px;
     }
     #map{
         width: 100%;
         left: 0;
-        top: 25vh;
+        top: 40vh;
+        margin: 0;
 
     }
 }
