--- a/src/css/intro.css
+++ b/src/css/intro.css
@@ -1,5 +1,7 @@
 .common {
 	margin-top: 80px;
+    height: inherit;
+    padding-top: 50px;
 }
 
 .intro-logo {
@@ -18,14 +20,14 @@
 	section {
 		position: relative;
 	}
-	.common {
-		margin: unset;
-		margin-top: 50px;
-		position: absolute;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-	}
+	/*.common {*/
+		/*margin: unset;*/
+		/*margin-top: 50px;*/
+		/*position: absolute;*/
+		/*top: 50%;*/
+		/*left: 50%;*/
+		/*transform: translate(-50%, -50%);*/
+	/*}*/
 	.intro-logo {
 		width: 100%;
 	}
