--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -264,10 +264,17 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     }
     .sponsor-text{
         margin-top: 20vh;
+
     }
     .sponsor{
         padding-top: unset;
         margin-top: unset;
+    }
+    .sponsor-contain{
+    	position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translate(-50%,-50%);
     }
 
 }
