--- a/src/css/sponsor.css
+++ b/src/css/sponsor.css
@@ -39,10 +39,17 @@
     }
     .sponsor-text{
         margin-top: 20vh;
+
     }
     .sponsor{
         padding-top: unset;
         margin-top: unset;
+    }
+    .sponsor-contain{
+    	position: absolute;
+    	top: 50%;
+    	left: 50%;
+    	transform: translate(-50%,-50%);
     }
 
 }
