--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -276,6 +276,9 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
     	left: 50%;
     	transform: translate(-50%,-50%);
     }
+    .bank{
+    	margin-top: 15vh;
+    }
 
 }
 
