--- a/src/sections/sponsors.njk
+++ b/src/sections/sponsors.njk
@@ -10,15 +10,15 @@
 	       	</div>
 		</div>
 		<div class="sponsor yesbank">
-			<div class="row">
-				<img src="./imgs/yesbank.png" class="sponsor-logo col-xs-12 col-sm-12 col-md-6 col-lg-6" />
+			<div class="container sponsor-contain">
+				<img src="./imgs/yesbank.png" class="sponsor-logo bank col-xs-12 col-sm-12 col-md-6 col-lg-6" />
 	            <div class="sponsor-text col-xs-12 col-sm-12 col-md-6 col-lg-6 yesbank-text">
 	                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 	            </div>
 			</div>
 		</div>
 		<div class="sponsor medical">
-			<div class="row">
+			<div class="container sponsor-contain">
 				<img src="./imgs/medical.png" class="sponsor-logo col-xs-12 col-sm-12 col-md-6 col-lg-6" />
             	<div class="sponsor-text col-xs-12 col-sm-12 col-md-6 col-lg-6 medical-text">
                 	Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laboreorum.
