--- a/src/sections/intro.njk
+++ b/src/sections/intro.njk
@@ -1,5 +1,7 @@
     <section class=" section active intro-section">
     	<div class="common">
+
+        {#<img class="run-image" src="imgs/run.png">#}
         <div class="container">
             <div class="row">
             <div class="intro-logo col-lg-8 col-md-8 col-xs-12 col-sm-12">
