--- a/src/sections/contact.njk
+++ b/src/sections/contact.njk
@@ -1,26 +1,28 @@
 <section class="section">
     <div class="common">
     <div class="contact">
-        <h2 class="contact_heading">Contact US</h2>
+        <h2 class="contact-heading">Contact US</h2>
         <div class="contacts_section">
             <div class="container">
-                <div class="col-lg-6 col-md-6 col-xs-6 col-sm-6">
-                    <h3>Elza Tess Varkey</h3>
-                    <span>Social Initatives Manager,Excel2017</span><br>
-                    <span>+91 9562391591</span>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12 ">
+                    <h2 class="contact-head">Elza Tess Varkey</h2>
+                    <p>Social Initatives Manager, Excel2017</p>
+                    <p>+91 9562391591</p>
                 </div>
-                <div class="col-xs-6 col-md-6 col-lg-6 col-xs-6">
-                    <h3>Arjun Saju</h3>
-                    <span>Chairman,Excel2017</span><br>
-                    <span>+91 8943239997</span>
+                <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                    <h2 class="contact-head">Arjun Saju</h2>
+                    <p>Chairman, Excel2017</p>
+                    <p>+91 8943239997</p>
                 </div>
             </div>
         </div>
         <div class="socialIcons">
-            <h4>Follow Us on</h4>
-            <a href="#" class="facebook"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
-            <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
-            <a href="#" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
+            <h4>Follow us on:</h4>
+            <div class="social-icons">
+                <a href="#" class="facebook"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+                <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                <a href="#" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
+            </div>
         </div>
     </div>
     </div>
