--- a/src/sections/route.njk
+++ b/src/sections/route.njk
@@ -1,5 +1,5 @@
 <section class="section">
-    <div class="route">
+    <div class="route container">
 
         <div class="waypoints">
             <h1>WayPoints</h1>
