--- a/src/css/route.css
+++ b/src/css/route.css
@@ -1,36 +1,36 @@
-#map{
-    height: 60vh;
-    width: 40%;
-    margin-top: 30px;
-    left: 40%;
+#map {
+	height: 60vh;
+	width: 50%;
 }
-.route{
-    display: flex;
-    position: relative;
-    flex-wrap: wrap;
-    margin-left: 30px;
-    margin-right: 30px;
+.route {
+	display: flex;
+	position: relative;
+	flex-wrap: wrap;
 }
-.waypoints{
-    width: 40%;
-    position: absolute;
-    height: 100%;
-    top: 35%;
+.waypoints {
+	width: 50%;
+	margin-top: auto;
+	margin-bottom: auto;
 }
-@media(max-width: 980px) {
-    .waypoints{
-       width: 100%;
-       position: absolute;
-       top: 0 ;
-
-    }
-    .route{
-        position: relative;
-        margin: 0;
-    }
-    #map{
-        width: 100%;
-        left: 0;
-        top: 30vh;
-    }
+@media (max-width: 980px) {
+	.waypoints {
+		width: 100%;
+		top: 0;
+		margin-bottom: 50px;
+	}
+	.route {
+		position: relative;
+	}
+	#map {
+		height: 50vh;
+		width: 100%;
+	}
+}
+@media (max-width: 380px) {
+	.waypoints {
+		margin-bottom: 25px;
+	}
+	.route {
+		margin-top: 50px;
+	}
 }
