--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -600,3 +600,11 @@ a {
 	margin: 0 auto;
 	margin-bottom: 2%;
 }
+.timer-contain {
+	position: static;
+}
+@media (max-width: 800px) {
+	.timer-contain {
+		position: unset;
+	}
+}
