--- a/src/sections/contact.njk
+++ b/src/sections/contact.njk
@@ -19,9 +19,9 @@
         <div class="socialIcons">
             <h4>Follow us on:</h4>
             <div class="social-icons">
-                <a href="#" class="facebook"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
-                <a href="#" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
-                <a href="#" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
+                <a href="https://www.facebook.com/excelmec" class="facebook"><i class="fa fa-facebook-official fa-2x" aria-hidden="true"></i></a>
+                <a href="https://www.youtube.com/channel/UCLP9HOgPekLpFzv2xIVwoFg" class="youtube"><i class="fa fa-youtube fa-2x"></i></a>
+                <a href="https://www.instagram.com/excelmec/" class="instagram"><i class="fa fa-instagram fa-2x"></i></a>
             </div>
         </div>
     </div>
